--- a/templates/connect-inject-deployment.yaml
+++ b/templates/connect-inject-deployment.yaml
@@ -41,6 +41,23 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.namespace
+            {{- /* An ACL token is only necessary for the connect injector if namespaces are enabled */}}
+            {{- if .Values.global.consulNamespaces.enabled }}
+            {{- if (and .Values.connectInject.aclInjectToken.secretName .Values.connectInject.aclInjectToken.secretKey) }}
+            - name: CONSUL_HTTP_TOKEN
+              valueFrom:
+                secretKeyRef:
+                  name: {{ .Values.connectInject.aclInjectToken.secretName }}
+                  key: {{ .Values.connectInject.aclInjectToken.secretKey }}
+            {{- end }}
+            {{- if .Values.global.bootstrapACLs }}
+            - name: CONSUL_HTTP_TOKEN
+              valueFrom:
+                secretKeyRef:
+                  name: "{{ template "consul.fullname" . }}-connect-injector-acl-token"
+                  key: "token"
+            {{- end }}
+            {{- end }}
           command:
             - "/bin/sh"
             - "-ec"
@@ -66,13 +83,28 @@ spec:
                 {{- if (and .Values.connectInject.centralConfig.enabled .Values.connectInject.centralConfig.defaultProtocol) }}
                 -default-protocol="{{ .Values.connectInject.centralConfig.defaultProtocol }}" \
                 {{- end }}
-{{- if .Values.connectInject.certs.secretName }}
+                {{- if .Values.global.consulNamespaces.enabled }}
+                -enable-namespaces=true \
+                -consul-namespace={{ .Values.global.consulNamespaces.consulNamespaceName }} \
+                {{- range $value := .Values.connectInject.allowNamespacesList }}
+                -allow-namespace={{ $value }} \
+                {{- end }}
+                {{- range $value := .Values.connectInject.denyNamespacesList }}
+                -deny-namespace={{ $value }} \
+                {{- end }}
+                {{- if .Values.global.consulNamespaces.mirrorK8s }}
+                -enable-namespace-mirroring=true \
+                -mirroring-prefix={{ .Values.global.consulNamespaces.mirroringPrefix }} \
+                -acl-binding-rule-selector={{ .Values.connectInject.aclBindingRuleSelector }} \
+                {{- end }}
+                {{- end }}
+                {{- if .Values.connectInject.certs.secretName }}
                 -tls-cert-file=/etc/connect-injector/certs/{{ .Values.connectInject.certs.certName }} \
                 -tls-key-file=/etc/connect-injector/certs/{{ .Values.connectInject.certs.keyName }}
-{{- else }}
+                {{- else }}
                 -tls-auto=${CONSUL_FULLNAME}-connect-injector-cfg \
                 -tls-auto-hosts=${CONSUL_FULLNAME}-connect-injector-svc,${CONSUL_FULLNAME}-connect-injector-svc.${NAMESPACE},${CONSUL_FULLNAME}-connect-injector-svc.${NAMESPACE}.svc
-{{- end }}
+                {{- end }}
           livenessProbe:
             httpGet:
               path: /health/ready
@@ -103,6 +135,19 @@ spec:
           secret:
             secretName: {{ .Values.connectInject.certs.secretName }}
 {{- end }}
+      {{- if and .Values.global.bootstrapACLs .Values.global.consulNamespaces.enabled }}
+      initContainers:
+      - name: injector-acl-init
+        image: {{ .Values.global.imageK8S }}
+        command:
+          - "/bin/sh"
+          - "-ec"
+          - |
+            consul-k8s acl-init \
+              -secret-name="{{ template "consul.fullname" . }}-connect-injector-acl-token" \
+              -k8s-namespace={{ .Release.Namespace }} \
+              -init-type="sync"
+      {{- end }}
       {{- if .Values.connectInject.nodeSelector }}
       nodeSelector:
         {{ tpl .Values.connectInject.nodeSelector . | indent 8 | trim }}
