--- a/templates/server-statefulset.yaml
+++ b/templates/server-statefulset.yaml
@@ -98,6 +98,7 @@ spec:
 
               exec /bin/consul agent \
                 -advertise="${POD_IP}" \
+                -advertise-wan="{{ .Values.server.advertiseWan }}" \
                 -bind=0.0.0.0 \
                 -bootstrap-expect={{ .Values.server.bootstrapExpect }} \
                 -client=0.0.0.0 \
