Assume consul server is internally routable

--- a/templates/server-external-service.yaml
+++ b/templates/server-external-service.yaml
@@ -17,7 +17,7 @@ metadata:
     # See your cloud provider's documentation for the correct annotations
     # needed for creating an external LoadBalancer.
 spec:
-  type: LoadBalancer
+  type: NodePort
   publishNotReadyAddresses: true
   ports:
     - name: http
